--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Tim 13</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <div>
+            <h1>CEB E13</h1>
+        </div>
+    </header>
     <div class="body"></div>
     <footer></footer>
 </body>
