--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         </div>
     </header>
     <div class="body"></div>
-    <footer></footer>
+    <footer>
+        <p>ini footer</p>
+    </footer>
 </body>
 </html>
