tambah div baru

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h1>CEB E13</h1>
         </div>
     </header>
+    <div><p>baru</p></div>
     <div class="body"></div>
     <footer>
         <p>ini footer</p>
