--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>CEB E13</h1>
         </div>
     </header>
-    <div><p>baru</p></div>
+    <div><p>coba baru</p></div>
     <div class="body"></div>
     <footer>
         <p>ini footer</p>
