Nyobain ganti footer

--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <title>Tim 13</title>
 </head>
 <body>
-    <header>
-        <div>
-            <h1>CEB E13</h1>
-        </div>
-    </header>
-    <div><p>coba baru</p></div>
-    <div class="body"></div>
-    <footer>
-        <p>ini footer</p>
-    </footer>
+<header></header>
+<main></main>
+<footer>
+    <h3>CE15</h3>
+    <div class="footer-listG">
+        <ul class="listG">
+            <li>Tentang Kami</li>
+            <li>Tentang CEB UGM X progate</li>
+        </ul>
+    </div>
+</footer>
 </body>
 </html>
