Menambahkan Header dan Main-Top

--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tim 13</title>
+    <title>PROJECT CEB TIM E13</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
-<header></header>
-<main></main>
+<header>
+    <div class="container">
+        <div class="header-left">
+            <div class="logo">
+                <a href="#">TIM E13</a>
+            </div>
+        </div>
+    </div>
+</header>
+<main>
+    <div class="top-wrapper">
+        <div class="container">
+            <h1>CODING EXPERIENCE BOOTCAMP</h1>
+            <p>Merupakan program pelatihan pemrograman hasil kerjasama dari <span>Progate</span> dan <span>Center for Digital Society - cfds Fisipol UGM</span>.</p>
+            <p>Kami adalah tim yang terbentuk didalam pelatihan ini, peserta dari kelas E dengan nama Tim CEB E13.</p>
+        </div>
+    </div>
+</main>
 <footer>
     <h3>CE15</h3>
     <div class="footer-listG">
