--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
+
+<!-- HEADER ??? -->
 <header>
     <div class="container">
         <div class="header-left">
@@ -19,21 +21,42 @@
     </div>
 </header>
 <main>
+
+    <!-- MAIN-TOP RAMZY -->
     <div class="top-wrapper">
         <div class="container">
-            <h1>CODING EXPERIENCE BOOTCAMP</h1>
-            <p>Merupakan program pelatihan pemrograman hasil kerjasama dari <span>Progate</span> dan <span>Center for Digital Society - cfds Fisipol UGM</span>.</p>
-            <p>Kami adalah tim yang terbentuk didalam pelatihan ini, peserta dari kelas E dengan nama Tim CEB E13.</p>
+            <div class="text-container">
+                <h1>CODING EXPERIENCE BOOTCAMP</h1>
+                <p>Merupakan program pelatihan pemrograman hasil kerjasama dari <span>Progate</span> dan <span>Center for Digital Society - cfds Fisipol UGM</span>.</p>
+                <p>Kami adalah tim yang terbentuk didalam pelatihan ini, peserta dari kelas E dengan nama Tim CEB E13.</p>
+            </div>
+            <div class="image-container">
+                <div class="image left">
+                    <img src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_website_builder_bxki.svg" alt="">
+                    <img src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_design_stats_ne2k.svg" alt="">
+                </div>
+                <div class="image right">
+                    <img src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_content_team_3epn.svg" alt="">
+                </div>
+            </div>
         </div>
     </div>
+
+    <!-- MAIN-MIDDLE ??? -->
+    <div class="middle-wrapper">
+
+    </div>
+
+    <!-- MAIN-BOTTOM GILLAR -->
+    <div class="bottom-wrapper">
+
+    </div>
 </main>
+
+<!-- FOOTER ??? -->
 <footer>
-    <h3>CE15</h3>
-    <div class="footer-listG">
-        <ul class="listG">
-            <li>Tentang Kami</li>
-            <li>Tentang CEB UGM X progate</li>
-        </ul>
+    <div class="footer">
+
     </div>
 </footer>
 </body>
