--- a/index.html
+++ b/index.html
@@ -24,20 +24,16 @@
 
     <!-- MAIN-TOP RAMZY -->
     <div class="top-wrapper">
-        <div class="container">
+        <div class="top-container">
             <div class="text-container">
                 <h1>CODING EXPERIENCE BOOTCAMP</h1>
                 <p>Merupakan program pelatihan pemrograman hasil kerjasama dari <span>Progate</span> dan <span>Center for Digital Society - cfds Fisipol UGM</span>.</p>
-                <p>Kami adalah tim yang terbentuk didalam pelatihan ini, peserta dari kelas E dengan nama Tim CEB E13.</p>
+                <p>Kami adalah tim yang terbentuk didalam pelatihan ini, peserta dari kelas E dengan kode Tim CEB E13.</p>
             </div>
             <div class="image-container">
-                <div class="image left">
-                    <img src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_website_builder_bxki.svg" alt="">
-                    <img src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_design_stats_ne2k.svg" alt="">
-                </div>
-                <div class="image right">
-                    <img src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_content_team_3epn.svg" alt="">
-                </div>
+                <img class="image left" src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_website_builder_bxki.svg" alt="">
+                <img class="image right" src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_design_stats_ne2k.svg" alt="">
+                <img class="image left" src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_content_team_3epn.svg" alt="">
             </div>
         </div>
     </div>
