--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>PROJECT CEB TIM E13</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -24,6 +25,9 @@
 
     <!-- MAIN-TOP RAMZY -->
     <div class="top-wrapper">
+        <div class="banner">
+            <h1>TUGAS KELOMPOK CEB HTML & CSS</h1>
+        </div>
         <div class="top-container">
             <div class="text-container">
                 <h1>CODING EXPERIENCE BOOTCAMP</h1>
