--- a/index.html
+++ b/index.html
@@ -49,11 +49,14 @@
     </div>
 </main>
 
-<!-- FOOTER ??? -->
+<!-- FOOTER Yisra -->
 <footer>
-    <div class="footer">
-
-    </div>
+  <div class="footer-left">
+    <p>© 2020 CEB E13 All Rights Reserved</p>
+  </div>
+  <div class="footer-right">
+    <p>See you next time!</p>
+  </div>
 </footer>
 </body>
 </html>
