menambahkan animasi pada main-bottom

--- a/index.html
+++ b/index.html
@@ -82,9 +82,16 @@
     </div>
 
     <!-- MAIN-BOTTOM GILLAR -->
-    <div class="bottom-wrapper">
-
-    </div>
+  <div class="contentG">
+      <div class="slider-wrapper">
+          Yang Kami buat sekarang adalah 
+          <div class="slider">
+              <div class="slider-text1">Web Responsive</div>
+              <div class="slider-text2">Animasi</div>
+              <div class="slider-text3">Struktur HTML & CSS-nya</div>
+          </div>
+      </div>
+  </div>
 </main>
 
 <!-- FOOTER Yisra -->
