--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 <!-- HEADER ??? -->
 <header>
     <div class="container">
-        <div class="header-left">
             <div class="logo">
-                <a href="#">TIM E13</a>
+                <p>TIM E13</p>
             </div>
         </div>
     </div>
@@ -54,28 +53,28 @@
               <img src="https://prog-8.com/images/html/advanced/html.png">
               <p>Asal Daerah</p>
             </div>
-            <p class="txt-contents">Kami Semua Berasal Dari Daerah Yang Berbeda, Ada Yang Dari Kediri, Medan, Jakarta, Semarang, dan Bandung. </p>
+            <p class="txt-contents">Kami semua berasal dari daerah yang berbeda. Ada yang dari Kediri, Medan, Jakarta, Semarang, dan Bandung.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://prog-8.com/images/html/advanced/jQuery.png">
               <p>Pekerjaan Sehari-Hari</p>
             </div>
-            <p class="txt-contents">Latar Belakang Pekerjaan Kami Pun Berbeda, Ada Yang Bekerja Di Dunia IT,Wirausaha,Maupun Mahasiswa .</p>
+            <p class="txt-contents">Latar belakang pekerjaan kami pun berbeda, ada yang bekerja di dunia IT, wirausaha, maupun mahasiswa.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://prog-8.com/images/html/advanced/ruby.png">
               <p>Pendidikan</p>
             </div>
-            <p class="txt-contents">Latar Pendidikan Kami Semua Berbeda, Ada Yang Memang Berlatar Belakang Pendidikan IT Maupun Diluar Bidang IT.</p>
+            <p class="txt-contents">Latar pendidikan kami semua berbeda, ada yang memang berlatar belakang pendidikan IT maupun di luar bidang IT.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://prog-8.com/images/html/advanced/php.png">
               <p>Pengalaman Coding</p>
             </div>
-            <p class="txt-contents">Ada Beberapa Dari Kami Yang Cukup Fasih Dalam Coding Dan Juga Belum Berpengalaman atau Baru Belajar Mengenai Dunia Coding.</p>
+            <p class="txt-contents">Ada beberapa dari kami yang cukup fasih dalam coding dan ada juga yang belum berpengalaman atau baru belajar mengenai dunia coding.</p>
           </div>
         </div>
       </div>
@@ -84,7 +83,7 @@
     <!-- MAIN-BOTTOM GILLAR -->
   <div class="contentG">
       <div class="slider-wrapper">
-          Yang Kami buat sekarang adalah 
+          Yang Kami buat sekarang adalah
           <div class="slider">
               <div class="slider-text1">Web Responsive</div>
               <div class="slider-text2">Animasi</div>
