Sampai Responsive Smartphone text-container

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="icon" href="https://raw.githubusercontent.com/alvinadjie/ceb13/master/Logo%20E13.png">
 </head>
 <body>
 
@@ -15,7 +16,7 @@
 <header>
     <div class="container">
             <div class="logo">
-                <p>TIM E13</p>
+                <img class="img-logo" src="https://raw.githubusercontent.com/alvinadjie/ceb13/master/Logo%20E13.png" alt="">
             </div>
         </div>
     </div>
@@ -30,13 +31,20 @@
         <div class="top-container">
             <div class="text-container">
                 <h1>CODING EXPERIENCE BOOTCAMP</h1>
-                <p>Merupakan program pelatihan pemrograman hasil kerjasama dari <span>Progate</span> dan <span>Center for Digital Society - cfds Fisipol UGM</span>.</p>
-                <p>Kami adalah tim yang terbentuk di dalam pelatihan ini, peserta dari kelas E dengan kode Tim CEB E13.</p>
+                <p>bersama</p>
+                <p><span><a href="https://progate.com/">PROGATE</a></span> dan <span><a href="https://cfds.fisipol.ugm.ac.id/home">CfDS Fisipol UGM</a></span></p>
+                <p>Kami peserta CEB 2020 dari kelas E <br/>yang tergabung dalam Tim E13.</p>
             </div>
             <div class="image-container">
-                <img class="image left" src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_website_builder_bxki.svg" alt="">
-                <img class="image right" src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_design_stats_ne2k.svg" alt="">
-                <img class="image left" src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_content_team_3epn.svg" alt="">
+                <div class="container-left">
+                    <img class="image left" src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_website_builder_bxki.svg" alt="">
+                </div>
+                <div class="container-right">
+                    <img class="image right" src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_design_stats_ne2k.svg" alt="">
+                </div>
+                <div class="container-left">
+                    <img class="image left" src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_content_team_3epn.svg" alt="">
+                </div>
             </div>
         </div>
     </div>
