[IMP] improve header

--- a/index.html
+++ b/index.html
@@ -7,20 +7,28 @@
     <title>PROJECT CEB TIM E13</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.css">
     <link rel="icon" href="https://raw.githubusercontent.com/alvinadjie/ceb13/master/Logo%20E13.png">
 </head>
 <body>
 
-<!-- HEADER ??? -->
+<!-- HEADER Alvinadjie -->
+
 <header>
     <div class="container">
-            <div class="logo">
-                <img class="img-logo" src="https://raw.githubusercontent.com/alvinadjie/ceb13/master/Logo%20E13.png" alt="">
-            </div>
-        </div>
+      <div class="header-left logo">
+        <img class="img-logo" src="https://raw.githubusercontent.com/alvinadjie/ceb13/master/Logo%20E13.png" alt="">
+      </div>
+      <!-- Tambahkan ikon menu disini -->
+      <span class="fa fa-bars menu-icon" aria-hidden="true"></span>
+      <div class="header-right">
+        <a href="#" class="header-menu">Pelajaran</a>
+        <a href="#" class="header-menu">Daftar</a>
+        <a href="#" class="login">Log in</a>
+      </div>
+      
     </div>
-</header>
+  </header>
 <main>
 
     <!-- MAIN-TOP RAMZY -->
@@ -91,9 +99,10 @@
     <!-- MAIN-BOTTOM GILLAR -->
   <div class="contentG">
       <div class="slider-wrapper">
+          
           Yang Kami buat sekarang adalah
           <div class="slider">
-              <div class="slider-text1">Web Responsive</div>
+              <div class="slider-text1">Web Responsive </div>
               <div class="slider-text2">Animasi</div>
               <div class="slider-text3">Struktur HTML & CSS-nya</div>
           </div>
@@ -104,7 +113,7 @@
 <!-- FOOTER Yisra -->
 <footer>
   <div class="footer-left">
-    <p>© 2020 CEB E13 All Rights Reserved</p>
+    <p>© 2020 CEB E13 All Rights Reserved </p>
   </div>
   <div class="footer-right">
     <p>See you next time!</p>
