[IMP] change text header

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
       <!-- Tambahkan ikon menu disini -->
       <span class="fa fa-bars menu-icon" aria-hidden="true"></span>
       <div class="header-right">
-        <a href="#" class="header-menu">Pelajaran</a>
-        <a href="#" class="header-menu">Daftar</a>
-        <a href="#" class="login">Log in</a>
+        <a href="#" class="header-menu">Home</a>
+        <a href="#" class="header-menu">About</a>
       </div>
       
     </div>
