[IMP] improve responsive

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p><span><a href="https://progate.com/">PROGATE</a></span> dan <span><a href="https://cfds.fisipol.ugm.ac.id/home">CfDS Fisipol UGM</a></span></p>
                 <p>Kami peserta CEB 2020 dari kelas E <br/>yang tergabung dalam Tim E13.</p>
             </div>
-            <div class="image-container">
+            <!-- <div class="image-container">
                 <div class="container-left">
                     <img class="image left" src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_website_builder_bxki.svg" alt="">
                 </div>
@@ -52,7 +52,7 @@
                 <div class="container-left">
                     <img class="image left" src="https://raw.githubusercontent.com/alvinadjie/ceb13/8f783aad1041607951e412ac6f14e90827bd8751/undraw_content_team_3epn.svg" alt="">
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
